--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "twilio-connector",
   "version": "1.0.0",
   "description": "",
+  "author": "Alexei Yagolnikov",
+  "license": "ISC",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json"
   },
   "dependencies": {
@@ -17,7 +19,5 @@
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.0.3"
-  },
-  "author": "Alexei Yagolnikov",
-  "license": "ISC"
+  }
 }
